--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
         "db:seed": "knex seed:run",
         "server": "nodemon index.js",
         "start": "node index.js"
-
     },
     "repository": {
         "type": "git",
@@ -23,6 +22,7 @@
     },
     "homepage": "https://github.com/LambdaSchool/node-api-challenge#readme",
     "dependencies": {
+        "cors": "^2.8.5",
         "helmet": "^4.1.0",
         "knex": "^0.21.5",
         "sqlite3": "^5.0.0"
