--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "db:seed": "knex seed:run",
-        "watch": "nodemon index.js",
+        "server": "nodemon index.js",
         "start": "node index.js"
     },
     "repository": {
